--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,7 @@
     <title>SportsStore</title>
     <link href="../node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet"/>
     <link href="../node_modules/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet"/>
+    <link href="app.css" rel="stylesheet"/>
     <script src="../node_modules/angular/angular.js"></script>
     <script>
         angular.module("sportsStore", ["customFilters", "cart", "ngRoute"])
