--- a/src/admin.html
+++ b/src/admin.html
@@ -9,20 +9,21 @@
     <link href="../node_modules/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet"/>
     <script>
         angular.module("sportsStoreAdmin", ["ngRoute"])
-                .config(function ($routeProvider) {
+                .config(['$routeProvider', function ($routeProvider) {
                     $routeProvider.when("/login", {
-                        templateUrl: "/views/adminLogin.html"
+                        templateUrl: "/sportsstore/src/views/adminLogin.html"
                     });
                     $routeProvider.when("/main", {
-                        templateUrl: "/views/adminMain.html"
+                        templateUrl: "/sportsstore/src/views/adminMain.html"
                     });
                     $routeProvider.otherwise({
                         redirectTo: "/login"
                     });
-                });
+                }]);
     </script>
+    <script src="controllers/adminController.js"></script>
 </head>
 <body>
-    <ng-view/>
+    <ng-view></ng-view>
 </body>
 </html>
